Fix ReadBuffer performance issue (partial)